--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,10 @@ logging.level.com.example.demo=DEBUG
 
 ## Profiles
 spring.profiles.active=bootstrap
+
+server.port=8086
+
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
