--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,9 +39,14 @@ logging.level.com.example.demo=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
 
-server.port=8086
-
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=123456
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=acme-message-broker
 spring.rabbitmq.port=5672
+
+# Application
+spring.application.name=vote-query
+
+# Eureka Client
+eureka.client.serviceUrl.defaultZone=http://acme-discovery-system:8761/eureka
+eureka.instance.preferIpAddress=true
